--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^4.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.6.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
